<resources>
    <string name="app_name">In Class Assignments</string>
    <string name="Practice">Practice</string>
    <string name="practice_log">Log Cat</string>
    <string name="practice_toast">Toast</string>
    <string name="inclass01">InClass01</string>
    <string name="bodymassindex">Body Mass Index (BMI)</string>
    <string name="weight">Weight</string>
    <string name="lb">lb</string>
    <string name="height">Height</string>
    <string name="feet">Feet</string>
    <string name="inches">Inches</string>
    <string name="calculateBMI">Calculate BMI</string>
    <string name="weightHint">Your weight in pounds</string>
    <string name="feetHint">feet</string>
    <string name="inchesHint">inches</string>
    <string name="empty" />
    <string name="calculateBMIText">Click on Calculate BMI to find your BMI</string>
    <string name="inclass02">InClass02</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="iUse">I use</string>
    <string name="android">Android</string>
    <string name="iOS">iOS</string>
    <string name="currentMood">Your current mood:</string>
    <string name="submit">Submit</string>
    <string name="selectAvatarText">Select Your Avatar</string>
    <string name="happy">Happy</string>
    <string name="nameResult">Name: </string>
    <string name="emailResult">Email: </string>
    <string name="iAm">I am</string>
    <string name="inClass03">InClass03</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="inClass04">InClass04</string>
    <string name="selectComplexity">Select Complexity:</string>
    <string name="minimum">Minimum:</string>
    <string name="maximum">Maximum:</string>
    <string name="average">Average:</string>
    <string name="generateNumber">Generate Number</string>
    <string name="searchKeyword">Search Keyword</string>
    <string name="go">Go</string>
    <string name="InClass05">InClass05</string>
    <string name="loading">Loading...</string>
    <string name="inClass06">InClass06</string>
    <string name="countryOrCategory">Please select a country, a category, or both!</string>
    <string name="countryHint">Select a Country:</string>
    <string name="categoryHint">Select a Category:</string>
    <string name="displayNews">Display the News</string>
    <string name="author">Author:</string>
    <string name="title">Title:</string>
    <string name="description">Description:</string>
    <string name="publishedAt">Published At:</string>
    <string name="inClass08">InClass08</string>
    <string name="firstName">First Name</string>
    <string name="lastName">Last Name</string>
    <string name="displayName">Display name</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="registerNow">Don\'t Have an Account? Register Now!</string>
    <string name="register">Register</string>
    <string name="confirmPassword">Confirm Password</string>
    <string name="registerButtonNow">Register Now</string>
    <string name="enterMessage">Send a Message!</string>
    <string name="profile">Profile</string>
    <string name="firstNameEnter">First Name:</string>
    <string name="lastNameEnter">Last Name:</string>
    <string name="displayNameEnter">Display Name:</string>
    <string name="editProfile">Edit Profile</string>
    <string name="confirmEdits">Confirm Edits</string>
    <string name="editFirstName">New First Name</string>
    <string name="editLastName">New Last Name</string>
    <string name="newDisplayName">New Display Name</string>
    <string name="inClass0809">InClass08/09</string>
    <string name="logout">logout</string>
    <string name="add_button">Add Chat</string>
    <string name="select_user_instruction">Select User</string>
    <string name="typeHere">Type Here...</string>
    <string name="chatName">Chat Name</string>
    <string name="textView">TextView</string>
    <string name="recentChats">Recent Chats</string>
    <string name="friend">friend 1</string>
    <string name="chat">Chat</string>
    <string name="text">text</string>
</resources>